part of fix for bug 83366, r=blake, sr=sspitzer, suggestions=jag - add a new method to nsICmdLineService to get the handler for a given parameter a=asa